--- a/index.html
+++ b/index.html
@@ -3,19 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Book tracker</title>
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <header>
+    
 
-    </header>
-    <main>
-
-    </main>
-    <footer>
-
-    </footer>
+    <script src="js/myBookTracker.js"></script>
 </body>
 </html>
